--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybal (0.1+r20120524-1) lucid; urgency=low
+
+  * Refactor Debian package & init script.
+
+ -- Faidon Liambotis <paravoid@debian.org>  Thu, 24 May 2012 20:36:23 +0300
+
 pybal (0.1+r74215) lucid; urgency=low
 
   * Newer TwistedBGP revision, fixing a bug where old BGP advertisements are
