--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pybal (1.02~1.gbp3fe740) UNRELEASED; urgency=low
+
+  ** SNAPSHOT build @3fe740bcff5c730b9620c6015c120bdedb2918ca **
+
+  * Add IPv6 BGP prefix advertisement support to PyBal
+  * Use 16 bit example ASNs for now, PyBal doesn't support 32 bit yet
+
+ -- Mark Bergsma <mark@wikimedia.org>  Wed, 27 Jun 2012 12:04:28 +0000
+
 pybal (1.01) precise; urgency=low
 
   * Fix erroneous use of str.find()
