--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybal (1.2+git20140410-0) stable; urgency=low
+
+  * Fixed runtime reconfiguration of upstream hosts.
+
+ -- Sergey Maslov <sergey@maslov.biz>  Thu, 10 Apr 2014 14:10:23 +0700
+
 pybal (1.2+git20140408-0) stable; urgency=low
 
   * Added check if host is an IP address.
