--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybal (1.11.1) jessie-wikimedia; urgency=medium
+
+  * Fix a typo in Proxyfetch, systemd unit file
+
+ -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Tue, 06 Oct 2015 14:16:17 +0200
+
 pybal (1.11) jessie-wikimedia; urgency=medium
 
   * Systemd support, removal of unneeded code (daemonization, file logging)
