New package, minor debian tweaks
* New release 1.12
* Add myself to the uploaders
* Updated standards version
* Re-added the sysvinit script, per debian policy, making it work with
  our current package.

Change-Id: Ie3afbda05966c8f7d0648194c095459a0c5dcf38

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pybal (1.12) jessie-wikimedia; urgency=medium
+
+  * IdleConnection: set tcp keepalive
+  * Add EtcdConfigurationObserver to consume configuration dynamically from etcd
+  * Convert logging from print to twisted.python.log
+
+ -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Fri, 30 Oct 2015 11:44:14 +0100
+
 pybal (1.11.1) jessie-wikimedia; urgency=medium
 
   * Fix a typo in Proxyfetch, systemd unit file
