pybal: fix config dict types
Change-Id: Ib203f50617c640d0983c43936091f594a79e629b

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybal (1.12.1) jessie-wikimedia; urgency=medium
+
+  * Fix instrumentation config
+
+ -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Mon, 16 Nov 2015 15:28:14 +0100
+
 pybal (1.12) jessie-wikimedia; urgency=medium
 
   * IdleConnection: set tcp keepalive
