ipvs: switch back to blocking execution
This is supposedly causing ipvs errors we're seeing in production.

Change-Id: I5f9be2e214f2d90e6bbd117cca2a60d6d54f6a80

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybal (1.13) jessie-wikimedia; urgency=medium
+
+  * Reverted ansyncronous execution of ipvsadm, as it caused race conditions to happen
+
+ -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Wed, 18 Nov 2015 15:49:48 +0100
+
 pybal (1.12.1) jessie-wikimedia; urgency=medium
 
   * Fix instrumentation config
