--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybal (1.13.1) jessie-wikimedia; urgency=medium
+
+  * Fix alerting typo
+
+ -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Wed, 18 Nov 2015 17:00:22 +0100
+
 pybal (1.13) jessie-wikimedia; urgency=medium
 
   * Reverted ansyncronous execution of ipvsadm, as it caused race conditions to happen
